--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
+body{
+  /* height: 100vh; */
+  /* width: 100vw; */
+  background-image: linear-gradient(35deg, rgb(50, 188, 243), rgb(234, 46, 78));
+  background-size: cover;
+}
+
 .page{
-  height: 100vh;
-  width: 100vw;
-  background-color: aqua;
+  height: 550px;
+  width: 350px;
+  position: absolute;
+  margin-left: 38%;
+  margin-top: 5%;
+  border-radius: 10px;
+  background-color: rgb(216, 249, 249);
 }
