--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-body{
-  /* height: 100vh; */
-  /* width: 100vw; */
+.login-page{
+  height: 100vh;
+  width: 100wh;
   background-image: linear-gradient(35deg, rgb(50, 188, 243), rgb(234, 46, 78));
   background-size: cover;
+  font-family: "Poppins", sans-serif;
 }
 
 .page{
@@ -13,4 +14,111 @@ body{
   margin-top: 5%;
   border-radius: 10px;
   background-color: rgb(216, 249, 249);
+}
+
+.logo{
+  height: 20%;
+  width: 100%;
+  text-align: center;
+  padding-top: 30px;
+  /* border: 1px solid black; */
+}
+
+.form{
+  height: 45%;
+  width: 100%;
+  /* border: 1px solid black; */
+  padding: 15px;
+  padding-top: 15px;
+  font-size: 15px;
+  color: rgb(164, 161, 161);
+}
+
+.form .flex-nowrap .username{
+  background-color: rgb(216, 249, 249);
+  border: none;
+  border-bottom: 1px solid rgb(164, 161, 161);
+  border-radius: 0;
+  font-size: 15px;
+  color: rgb(164, 161, 161);
+}
+
+.form .flex-nowrap .username::placeholder{
+  color: rgb(164, 161, 161);
+}
+
+.form .password{
+  top: 10px;
+  font-size: 15px;
+  color: rgb(164, 161, 161);
+}
+
+.forgotPassword{
+  text-align: end;
+  padding-top: 10px;
+  text-decoration: none;
+  /* color: rgb(164, 161, 161); */
+}
+
+.forgotPassword a{
+  text-decoration: none;
+  color: rgb(164, 161, 161);
+}
+
+.form .login-btn button{
+  margin-top: 15px;
+  border-radius: 25px;
+  background-image: linear-gradient(90deg ,rgb(50, 188, 243), rgb(234, 46, 78));
+  border: none;
+}
+
+.social-media{
+  height: 20%;
+  width: 100%;
+  /* border: 1px solid black; */
+  text-align: center;
+  padding-top: 15px;
+}
+
+.page .social-media .s-icon{
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  /* border: 1px solid black; */
+  margin-left: 5px;
+  background-color: aqua;
+  color: aliceblue;
+  padding-top: 8px;
+}
+
+.page .social-media .s-icon i{
+  scale: 1.1;
+}
+
+.page .social-media .facebook{
+  background-color: #1877F2;
+  color: aliceblue;
+}
+
+.page .social-media .youtube{
+  background-color: #FF0000;
+  color: aliceblue;
+}
+
+.page .social-media .X{
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.icons{
+  display: flex;
+  padding-left: 105px;
+}
+
+.page .signup{
+  padding-top: 20px;
+}
+
+.page .signup a{
+ text-decoration: none;
 }
