--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
   padding: 15px;
   padding-top: 15px;
   font-size: 15px;
-  color: rgb(164, 161, 161);
+  color: rgb(41, 41, 41);
 }
 
 .form .flex-nowrap .username{
@@ -43,6 +43,11 @@
   color: rgb(164, 161, 161);
 }
 
+.form .username .flex-nowrap input:enabled{
+  outline: none;
+  box-shadow: none;
+}
+
 .form .flex-nowrap .username::placeholder{
   color: rgb(164, 161, 161);
 }
@@ -50,7 +55,12 @@
 .form .password{
   top: 10px;
   font-size: 15px;
-  color: rgb(164, 161, 161);
+  color: rgb(41, 41, 41);
+}
+
+.form .password input:enabled{
+  outline: none;
+  box-shadow: none;
 }
 
 .forgotPassword{
@@ -62,6 +72,11 @@
 
 .forgotPassword a{
   text-decoration: none;
+  color: rgb(41, 41, 41);
+  transition: all 0.3s ease-in-out;
+}
+
+.forgotPassword .F-p:hover{
   color: rgb(164, 161, 161);
 }
 
@@ -70,6 +85,12 @@
   border-radius: 25px;
   background-image: linear-gradient(90deg ,rgb(50, 188, 243), rgb(234, 46, 78));
   border: none;
+  transition: all 0.3s ease-in-out;
+}
+
+.form .login-btn button:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  scale: 1.02;
 }
 
 .social-media{
@@ -78,6 +99,8 @@
   /* border: 1px solid black; */
   text-align: center;
   padding-top: 15px;
+  color: rgb(41, 41, 41);
+  font-size: 15px;
 }
 
 .page .social-media .s-icon{
@@ -89,10 +112,16 @@
   background-color: aqua;
   color: aliceblue;
   padding-top: 8px;
+  transition: all 0.3s ease-in-out;
 }
 
 .page .social-media .s-icon i{
   scale: 1.1;
+}
+
+.page .social-media .s-icon:hover{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.24), 0 4px 8px 0 rgba(0,0,0,0.19);
+  scale: 1.05;
 }
 
 .page .social-media .facebook{
@@ -117,8 +146,17 @@
 
 .page .signup{
   padding-top: 20px;
+  color:rgb(41, 41, 41);
+  font-size: 15px;
 }
 
 .page .signup a{
  text-decoration: none;
+ color: rgb(164, 161, 161);
+ transition: all 0.3s ease-in-out;
+}
+
+.page .signup .anchor:hover{
+  font-size: 17px;
+  color:rgb(41, 41, 41);
 }
